--- a/hm.properties
+++ b/hm.properties
@@ -2,7 +2,7 @@ delay = 60
 status.save.url = http://msk.reasoningmind.org/webiptest/
 yd.sync.delay = 300
 reboot.on = 03:58
-sensors = inside outside test warmOut warmIn warm.floor faucet room bedroom cellar under.floor second.floor attic chimney
+sensors = inside outside test warmOut warmIn warm.floor faucet room bedroom winter.garden cellar under.floor second.floor attic chimney
 inside = /opt/dht22/lol_dht22/loldht 25
 outside = /opt/dht22/lol_dht22/loldht 28
 test = cat /sys/bus/w1/devices/28-01159264e1ff/w1_slave
@@ -12,6 +12,7 @@ warm.floor = cat /sys/bus/w1/devices/28-03159043f4ff/w1_slave
 faucet = cat /sys/bus/w1/devices/28-01159261cbff/w1_slave
 room = cat /sys/bus/w1/devices/28-0115926eb7ff/w1_slave
 bedroom = cat /sys/bus/w1/devices/28-0115926205ff/w1_slave
+winter.garden = cat /sys/bus/w1/devices/28-011592620eff/w1_slave
 cellar = cat /sys/bus/w1/devices/28-011592606cff/w1_slave
 under.floor = cat /sys/bus/w1/devices/28-01159267edff/w1_slave
 second.floor = cat /sys/bus/w1/devices/28-01159263b5ff/w1_slave
