--- a/build.xml
+++ b/build.xml
@@ -1,22 +1,18 @@
 <project name="Home Monitor">
 
-
     <target name="copy to YD">
-
-        <property name="yd.hm" value="C:/Users/ysb/YandexDisk/hm"/>
-        <copy todir="${yd.hm}">
-            <fileset dir="." includes="hm.jar"/>
-            <fileset dir="." includes="build.xml"/>
-            <fileset dir="." includes="src/**/*"/>
-            <fileset dir="." includes="js/**/*"/>
-            <fileset dir="." includes="*.html"/>
-        </copy>
-
+        <antcall target="copyToYD">
+            <param name="yd.hm" value="C:/Users/ysb/YandexDisk/hm"/>
+        </antcall>
     </target>
 
     <target name="copy to YD home">
+        <antcall target="copyToYD">
+            <param name="yd.hm" value="D:/YandexDisk/hm"/>
+        </antcall>
+    </target>
 
-        <property name="yd.hm" value="D:/YandexDisk/hm"/>
+    <target name="copyToYD">
         <copy todir="${yd.hm}">
             <fileset dir="." includes="hm.jar"/>
             <fileset dir="." includes="build.xml"/>
@@ -24,8 +20,6 @@
             <fileset dir="." includes="js/**/*"/>
             <fileset dir="." includes="*.html"/>
         </copy>
-
     </target>
-
 
 </project>
