--- a/hm.properties
+++ b/hm.properties
@@ -1,6 +1,8 @@
-delay = 60
+delay = 20
+#yd.path = /opt/yandex.disk/hm/
+yd.path = C:/YandexDisk/hm/
 status.save.url = http://msk.reasoningmind.org/webiptest/
-yd.sync.delay = 300
+yd.sync.delay = 60
 reboot.on = 03:58
 sensors = inside outside test warmOut warmIn warm.floor faucet room bedroom winter.garden cellar under.floor second.floor attic chimney
 inside = /opt/dht22/lol_dht22/loldht 25
