--- a/hm.properties
+++ b/hm.properties
@@ -1,8 +1,7 @@
-delay = 20
-#yd.path = /opt/yandex.disk/hm/
-yd.path = C:/YandexDisk/hm/
+delay = 60
 status.save.url = http://msk.reasoningmind.org/webiptest/
-yd.sync.delay = 60
+yd.path = /opt/yandex.disk/hm/
+yd.sync.delay = 300
 reboot.on = 01:30
 sensors = inside outside test warmOut warmIn warm.floor faucet room bedroom winter.garden cellar under.floor second.floor attic chimney
 inside = /opt/dht22/lol_dht22/loldht 25
