--- a/hm.properties
+++ b/hm.properties
@@ -1,9 +1,12 @@
-delay = 60
-status.save.url = http://msk.reasoningmind.org/webiptest/
 yd.path = /opt/yandex.disk/hm/
-yd.sync.delay = 300
+yd.sync.delay = 60
 reboot.on = 01:30
-sensors = inside outside test warmOut warmIn warm.floor faucet room bedroom winter.garden cellar under.floor second.floor attic chimney
+sensor.read.timeout = 2
+data.save.period = 5
+recent.size = 10000
+
+sensors = inside outside test warmOut warmIn warm.floor faucet room warmOut bedroom winter.garden cellar warmOut under.floor second.floor attic chimney
+
 inside = /opt/dht22/lol_dht22/loldht 25
 outside = /opt/dht22/lol_dht22/loldht 28
 test = cat /sys/bus/w1/devices/28-01159264e1ff/w1_slave
