--- a/hm.properties
+++ b/hm.properties
@@ -2,7 +2,7 @@ yd.path = /opt/yandex.disk/hm/
 yd.sync.delay = 60
 reboot.on = 01:30
 sensor.read.timeout = 2
-data.save.period = 5
+status.save.period = 1
 recent.size = 10000
 
 sensors = inside outside test warmOut warmIn warm.floor faucet room warmOut bedroom winter.garden cellar warmOut under.floor second.floor attic chimney
