--- a/hm_log4j.properties
+++ b/hm_log4j.properties
@@ -1,4 +1,4 @@
-log4j.logger.tempmon=DEBUG,filelog,consoleLog
+log4j.logger.tempmon=INFO,filelog,consoleLog
 
 log4j.appender.filelog=org.apache.log4j.FileAppender
 log4j.appender.filelog.File=logs/hm.log
