--- a/hm.properties
+++ b/hm.properties
@@ -2,23 +2,27 @@ yd.path = /opt/yandex.disk/hm/
 yd.sync.delay = 60
 reboot.on = 01:30
 sensor.read.timeout = 2
-status.save.period = 1
+status.save.period = 5
 recent.size = 10000
+dht22.path = /opt/dht22/lol_dht22/loldht
+ds18b20.path = /sys/bus/w1/devices/
 
 sensors = inside outside test warmOut warmIn warm.floor faucet room warmOut bedroom winter.garden cellar warmOut under.floor second.floor attic chimney
 
-inside = /opt/dht22/lol_dht22/loldht 25
-outside = /opt/dht22/lol_dht22/loldht 28
-test = cat /sys/bus/w1/devices/28-01159264e1ff/w1_slave
-warmOut = cat /sys/bus/w1/devices/28-0115911af8ff/w1_slave
-warmIn = cat /sys/bus/w1/devices/28-031590d20eff/w1_slave
-warm.floor = cat /sys/bus/w1/devices/28-03159043f4ff/w1_slave
-faucet = cat /sys/bus/w1/devices/28-01159261cbff/w1_slave
-room = cat /sys/bus/w1/devices/28-0115926eb7ff/w1_slave
-bedroom = cat /sys/bus/w1/devices/28-0115926205ff/w1_slave
-winter.garden = cat /sys/bus/w1/devices/28-011592620eff/w1_slave
-cellar = cat /sys/bus/w1/devices/28-011592606cff/w1_slave
-under.floor = cat /sys/bus/w1/devices/28-01159267edff/w1_slave
-second.floor = cat /sys/bus/w1/devices/28-01159263b5ff/w1_slave
-attic = cat /sys/bus/w1/devices/28-0315904578ff/w1_slave
-chimney = cat /sys/bus/w1/devices/28-031590d382ff/w1_slave
+inside = 25
+outside = 28
+test = 28-01159264e1ff
+warmOut = 28-0115911af8ff
+warmIn = 28-031590d20eff
+warm.floor = 28-03159043f4ff
+faucet = 28-01159261cbff
+room = 28-0115926eb7ff
+bedroom = 28-0115926205ff
+winter.garden = 28-011592620eff
+cellar = 28-011592606cff
+under.floor = 28-01159267edff
+second.floor = 28-01159263b5ff
+attic = 28-0315904578ff
+chimney = 28-031590d382ff
+
+#test = cat /sys/bus/w1/devices/28-01159264e1ff/w1_slave
