--- a/hm.properties
+++ b/hm.properties
@@ -1,28 +1,24 @@
 yd.path = /opt/yandex.disk/hm/
 yd.sync.delay = 60
-reboot.on = 01:30
+reboot.on = 01:57
 sensor.read.timeout = 2
 status.save.period = 5
 recent.size = 1000
 dht22.path = /opt/dht22/lol_dht22/loldht
 ds18b20.path = /sys/bus/w1/devices/
 
-sensors = inside outside test warmOut warmIn warm.floor faucet room warmOut bedroom winter.garden cellar warmOut under.floor second.floor attic chimney
+#sensors = inside outside test warmOut warmIn warm.floor faucet room bedroom winter.garden cellar water.in under.floor second.floor attic chimney
+sensors = inside outside test warmOut warmIn bedroom room warmOut winter.garden cellar water.in
 
 inside = 25
 outside = 28
-test = 28-01159264e1ff
-warmOut = 28-0115911af8ff
-warmIn = 28-031590d20eff
-warm.floor = 28-03159043f4ff
-faucet = 28-01159261cbff
-room = 28-0115926eb7ff
-bedroom = 28-0115926205ff
-winter.garden = 28-011592620eff
-cellar = 28-011592606cff
-under.floor = 28-01159267edff
-second.floor = 28-01159263b5ff
-attic = 28-0315904578ff
-chimney = 28-031590d382ff
+test = 28-00000a52a500
+warmOut = 28-00000a52cbc1
+warmIn = 28-00000a532fbf
+room = 28-00000a532ab0
+bedroom = 28-00000aa2a2c4
+winter.garden = 28-00000a540cf9
+cellar = 28-00000a532c20
+water.in = 28-00000a534931
 
 #test = cat /sys/bus/w1/devices/28-01159264e1ff/w1_slave
