--- a/hm.properties
+++ b/hm.properties
@@ -4,7 +4,7 @@ reboot.on = 01:57
 sensor.read.timeout = 2
 status.save.period = 5
 recent.size = 1000
-dht22.path = /opt/dht22/lol_dht22/loldht
+dht22.path = /opt/lol_dht22/loldht
 ds18b20.path = /sys/bus/w1/devices/
 
 #sensors = inside outside test warmOut warmIn warm.floor faucet room bedroom winter.garden cellar water.in under.floor second.floor attic chimney
