--- a/hm.properties
+++ b/hm.properties
@@ -2,7 +2,7 @@ yd.path = /opt/yandex.disk/hm/
 yd.sync.delay = 60
 reboot.on = 01:57
 sensor.read.timeout = 2
-status.save.period = 5
+current.save.period = 5
 recent.size = 1000
 dht22.path = /opt/lol_dht22/loldht
 ds18b20.path = /sys/bus/w1/devices/
