--- a/hm_log4j.properties
+++ b/hm_log4j.properties
@@ -1,7 +1,8 @@
 log4j.logger.tempmon=INFO,filelog,consoleLog
 
-log4j.appender.filelog=org.apache.log4j.FileAppender
+log4j.appender.filelog=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.filelog.File=logs/hm.log
+log4j.appender.filelog.DatePattern='.'yyyy-MM-dd
 log4j.appender.filelog.layout=org.apache.log4j.PatternLayout
 log4j.appender.filelog.append=false
 log4j.appender.filelog.layout.ConversionPattern=%d{HH:mm:ss.SSS} %m%n
