--- a/hm.properties
+++ b/hm.properties
@@ -1,24 +1,27 @@
-yd.path = /opt/yandex.disk/hm/
-yd.sync.delay = 60
 reboot.on = 01:57
-sensor.read.timeout = 2
+sensor.read.timeout = 4
 current.save.period = 5
-recent.size = 1000
+recent.size = 10000
 dht22.path = /opt/lol_dht22/loldht
 ds18b20.path = /sys/bus/w1/devices/
 
 #sensors = inside outside test warmOut warmIn warm.floor faucet room bedroom winter.garden cellar water.in under.floor second.floor attic chimney
-sensors = inside outside test warmOut warmIn bedroom room warmOut winter.garden cellar water.in
+sensors = inside outside test warmOut warm.floor warmIn bedroom room warmOut winter.garden cellar under.floor warmOut water.in faucet warmOut attic chimney
 
 inside = 25
 outside = 28
 test = 28-00000a52a500
 warmOut = 28-00000a52cbc1
+warm.floor = 28-00000aa19618
 warmIn = 28-00000a532fbf
 room = 28-00000a532ab0
 bedroom = 28-00000aa2a2c4
 winter.garden = 28-00000a540cf9
 cellar = 28-00000a532c20
 water.in = 28-00000a534931
+under.floor = 28-00000aa2663c
+faucet = 28-00000a53e83f
+attic = 28-00000aa1818b
+chimney = 28-00000aa2cf18
 
 #test = cat /sys/bus/w1/devices/28-01159264e1ff/w1_slave
