--- a/hm.properties
+++ b/hm.properties
@@ -1,21 +1,26 @@
-delay = 60
-status.save.url = http://msk.reasoningmind.org/webiptest/
-yd.path = /opt/yandex.disk/hm/
-yd.sync.delay = 300
-reboot.on = 01:30
-sensors = inside outside test warmOut warmIn warm.floor faucet room bedroom winter.garden cellar under.floor second.floor attic chimney
-inside = /opt/dht22/lol_dht22/loldht 25
-outside = /opt/dht22/lol_dht22/loldht 28
-test = cat /sys/bus/w1/devices/28-01159264e1ff/w1_slave
-warmOut = cat /sys/bus/w1/devices/28-0115911af8ff/w1_slave
-warmIn = cat /sys/bus/w1/devices/28-031590d20eff/w1_slave
-warm.floor = cat /sys/bus/w1/devices/28-03159043f4ff/w1_slave
-faucet = cat /sys/bus/w1/devices/28-01159261cbff/w1_slave
-room = cat /sys/bus/w1/devices/28-0115926eb7ff/w1_slave
-bedroom = cat /sys/bus/w1/devices/28-0115926205ff/w1_slave
-winter.garden = cat /sys/bus/w1/devices/28-011592620eff/w1_slave
-cellar = cat /sys/bus/w1/devices/28-011592606cff/w1_slave
-under.floor = cat /sys/bus/w1/devices/28-01159267edff/w1_slave
-second.floor = cat /sys/bus/w1/devices/28-01159263b5ff/w1_slave
-attic = cat /sys/bus/w1/devices/28-0315904578ff/w1_slave
-chimney = cat /sys/bus/w1/devices/28-031590d382ff/w1_slave
+reboot.on = 01:57
+sensor.read.timeout = 4
+current.save.period = 5
+recent.size = 10000
+dht22.path = /opt/lol_dht22/loldht
+ds18b20.path = /sys/bus/w1/devices/
+
+sensors = inside outside test warmOut warmFloor warmIn bedroom room warmOut winterGarden cellar underFloor warmOut waterIn faucet warmOut attic chimney
+
+inside = 25
+outside = 28
+test = 28-00000a52a500
+warmOut = 28-00000a52cbc1
+warmFloor = 28-00000aa19618
+warmIn = 28-00000a532fbf
+room = 28-00000a532ab0
+bedroom = 28-00000aa2a2c4
+winterGarden = 28-00000a540cf9
+cellar = 28-00000a532c20
+waterIn = 28-00000a534931
+underFloor = 28-00000aa2663c
+faucet = 28-00000a53e83f
+attic = 28-00000aa1818b
+chimney = 28-00000aa2cf18
+
+#test = cat /sys/bus/w1/devices/28-01159264e1ff/w1_slave
