requesting remote sensors implemented

--- a/hm.properties
+++ b/hm.properties
@@ -4,11 +4,16 @@ current.save.period = 5
 recent.size = 10000
 dht22.path = /opt/lol_dht22/loldht
 ds18b20.path = /sys/bus/w1/devices/
+remote.url = http://dacha.aldiserg.ru:18080/control/main
+#remote.url = http://192.168.1.99:8080/control/main
+#remote.url = http://astrocontrol:8080/control/main
 
-sensors = inside outside test warmOut warmFloor warmIn bedroom room warmOut winterGarden cellar underFloor warmOut waterIn faucet warmOut attic chimney
+sensors = inside outside test warmOut warmFloor warmIn bedroom room warmOut winterGarden cellar underFloor warmOut waterIn faucet secondFloor warmOut
+# attic chimney
+#sensors = test
 
-inside = 25
-outside = 28
+inside = 23
+outside = remote
 test = 28-00000a52a500
 warmOut = 28-00000a52cbc1
 warmFloor = 28-00000aa19618
@@ -20,7 +25,8 @@ cellar = 28-00000a532c20
 waterIn = 28-00000a534931
 underFloor = 28-00000aa2663c
 faucet = 28-00000a53e83f
+secondFloor = 28-00000aa2130d
 attic = 28-00000aa1818b
 chimney = 28-00000aa2cf18
 
-#test = cat /sys/bus/w1/devices/28-01159264e1ff/w1_slave
+#test = cat /sys/bus/w1/devices/28-00000a52a500/w1_slave
