remote addr fix

--- a/hm.properties
+++ b/hm.properties
@@ -4,9 +4,8 @@ current.save.period = 5
 recent.size = 10000
 dht22.path = /opt/lol_dht22/loldht
 ds18b20.path = /sys/bus/w1/devices/
-remote.url = http://dacha.aldiserg.ru:18080/control/main
-#remote.url = http://192.168.1.99:8080/control/main
-#remote.url = http://astrocontrol:8080/control/main
+#remote.url = http://dacha.aldiserg.ru:18080/control/main
+remote.url = http://192.168.1.99:8080/control/main
 
 sensors = inside outside test warmOut warmFloor warmIn bedroom room warmOut winterGarden cellar underFloor warmOut waterIn faucet secondFloor warmOut
 # attic chimney
