--- a/hm.properties
+++ b/hm.properties
@@ -1,6 +1,7 @@
 reboot.on = 01:57
 sensor.read.timeout = 4
 current.save.period = 5
+read.delay.ms = 100
 recent.size = 10000
 dht22.path = /opt/lol_dht22/loldht
 ds18b20.path = /sys/bus/w1/devices/
